WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158040
REGRESSION(
r189567
): Elements with aspect ratios are not handled correctly inside flexbox
https://bugs.webkit.org/show_bug.cgi?id=158040
Summary
REGRESSION(r189567): Elements with aspect ratios are not handled correctly in...
Dave Hyatt
Reported
2016-05-24 14:05:10 PDT
Elements with aspect ratios are not having their intrinsic sizes for min/max adjusted correctly. This includes images, canvas and video.
Attachments
Patch
(109.83 KB, patch)
2016-05-24 14:07 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-05-24 14:07:44 PDT
Created
attachment 279702
[details]
Patch
WebKit Commit Bot
Comment 2
2016-05-24 14:09:59 PDT
Attachment 279702
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:878: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:879: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:885: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:886: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:887: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:888: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:889: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:892: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/RenderFlexibleBox.cpp:948: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 9 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2016-05-31 11:41:00 PDT
Comment on
attachment 279702
[details]
Patch Clearing flags on attachment: 279702 Committed
r201516
: <
http://trac.webkit.org/changeset/201516
>
WebKit Commit Bot
Comment 4
2016-05-31 11:41:06 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 5
2016-05-31 11:42:07 PDT
rdar://problem/26235068
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug